# spectre

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  PITCH_DECK.md  PITCH_OUTLINE.md  PRD.md  README.md  SITEMAP.md  TECH_STACK.md  VIDEO_SCRIPT.md  out.txt  package-lock.json  package.json  tsconfig.json  vercel.json
agent-node/: package.json
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx  providers.tsx
dashboard/app/api/auth/[...nextauth]/: route.ts
dashboard/app/dashboard/: page.tsx
dashboard/app/dashboard/[agentId]/: page.tsx
dashboard/app/demo/: page.tsx
dashboard/components/: wallet-connect-button.tsx
dashboard/lib/: anchor-client.ts  supabase.ts
dashboard/utils/: SigninMessage.ts
docs-reference/: ELIZAOS_REFERENCE.md  MAGICBLOCK_DOCS_REFERENCE.md  SOLANA_AGENT_KIT_REFERENCE.md
tests/: test-delegation.ts
workflows/: WORKFLOW_CONFIDENTIAL_TRADE.md  WORKFLOW_DEPLOY_AGENT.md  WORKFLOW_UNDELEGATE.md
